# EguiVideoPlayer

./: Cargo.toml
examples/: terminal_version.rs
src/: app.rs  lib.rs
src/gstreamer_internals/: backend_framework.rs  backend_v2.rs  player_backend.rs  prober.rs  update.rs
src/gui/: custom_log.rs  player.rs
src/wgpu/: display_texture.rs  pack.rs
