[package]
name = "vid_v2"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test_app"
path = "src/app.rs"

[dependencies]
gstreamer = { version = "0.23.3", features = ["v1_24"] }
gstreamer-app = { version = "0.23.3", features = ["v1_24"] }
gstreamer-video = { version = "0.23.3", features = ["v1_24"] }
gstreamer-pbutils = { version = "0.23.2", features = ["v1_24"] }

eframe = { version = "0.29.1", features = ["wgpu"] }

bytemuck = { version = "1.18.0", features = ["derive"] }

anyhow = "1.0.93"

lazy_bastard = "0.1.6"

crossbeam-channel = "0.5.13"

log = "0.4.22"

url = "2.5.4"

egui_logger = "0.6.1"

# windows spacific
wasapi = "0.15.0"
winapi = { version = "0.3", features = ["winuser", "winbase", "winnt"] }